Fix spelling for Probability

--- a/02 - Combinatorics 101.tex
+++ b/02 - Combinatorics 101.tex
@@ -522,26 +522,26 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Team attack problems}
-  \begin{columns}[T]
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \item There are fewer than $50$ people at a party, and each person at the party shakes each other attendee’s hand once. If there are an odd number of total handshakes, what is the largest number of people there could be at the party?​
-        \item King Arthur chose to have his knights in Camelot seated at a round table.  Including Arthur, there are $12$ people seated at the table.  If Arthur cannot be seated next to Lancelot, how many possible configurations are possible.  Note that only a change in relative position counts as a configuration.​
-        \item A company with $4$ senior partners and $3$ junior partners wanted to form a $3$-person management committee with at least $2$ senior partners and at most $1$ junior partner.  How many different ways could they form this committee?
-        \seti
-      \end{enumerate}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \conti
-        \item What is the smallest number that has exactly $77$ divisors? You may use a calculator if that is helpful.​
-        \item The coach of the Graham Math Olympiad Team wants to arrange their trophies in a single row in a display case.  If there are $3$ MOEMS trophies, $5$ Math League trophies, and $2$ Mathcounts trophies, how many ways can she arrange the trophies if the trophies for each type of contest must be kept together?​
-        \item Two players are about to have a Pokemon card battle.  Each player has $10$ distinct cards, but can only select $6$ for the battle.  How many possible battle combinations are there for the match if the order of cards chosen does not matter?​
-      \end{enumerate}
-    \end{column}
-  \end{columns}
-\end{frame}
+% \begin{frame}{Team attack problems}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item There are fewer than $50$ people at a party, and each person at the party shakes each other attendee’s hand once. If there are an odd number of total handshakes, what is the largest number of people there could be at the party?​
+%         \item King Arthur chose to have his knights in Camelot seated at a round table.  Including Arthur, there are $12$ people seated at the table.  If Arthur cannot be seated next to Lancelot, how many possible configurations are possible.  Note that only a change in relative position counts as a configuration.​
+%         \item A company with $4$ senior partners and $3$ junior partners wanted to form a $3$-person management committee with at least $2$ senior partners and at most $1$ junior partner.  How many different ways could they form this committee?
+%         \seti
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \conti
+%         \item What is the smallest number that has exactly $77$ divisors? You may use a calculator if that is helpful.​
+%         \item The coach of the Graham Math Olympiad Team wants to arrange their trophies in a single row in a display case.  If there are $3$ MOEMS trophies, $5$ Math League trophies, and $2$ Mathcounts trophies, how many ways can she arrange the trophies if the trophies for each type of contest must be kept together?​
+%         \item Two players are about to have a Pokemon card battle.  Each player has $10$ distinct cards, but can only select $6$ for the battle.  How many possible battle combinations are there for the match if the order of cards chosen does not matter?​
+%       \end{enumerate}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
 
 % \begin{frame}{Rule of product}
 %   \begin{columns}[T]
