--- a/03 - Probablility.tex
+++ b/03 - Probablility.tex
@@ -34,7 +34,7 @@
       \begin{definition}
         If the number of outcomes is countable and \emph{if all oucomes have the same probability}, then \mbox{the~\textbf{probability}} of desired oucome is:
         \[ P = \frac{\text{(number of desired outcomes)}}{\text{(total number of events)}}. \]
-        \vspace*{-1ex}
+        \vspace*{-1.5ex}
       \end{definition}
 
       Probability problems are either based on \emph{countable} outcomes or on outcomes that are not countable. The later case is called \emph{geometric probability} or \emph{continuous probability}.
@@ -120,7 +120,7 @@
       \end{definition}
       {\small We used that rule to solve the problem \emph{"throw a die and toss a coin"}.}
       \begin{definition}
-        If two events are \emph{dependent} the \textbf{probability} of both of them happen is
+        If two events are \emph{dependent} the \textbf{probability} of both of them happening is
         \[ P (A\ \text{and}\ B) = P (A) \cdot P (B \mid A). \] 
         \vspace*{-2.5ex} 
       \end{definition}
@@ -128,7 +128,7 @@
         \begin{problem}
           What is the probability of choosing \emph{an ace} \textbf{and then} \emph{a~king} from a full deck of $52$ cards?
         \end{problem}
-        The probability to choose an ace is $4/52$. Then we selecting a king from the deck without one card, so the probability to choose a king is $4/51$. The total probability~is
+        The probability to choose an ace is $4/52$. Then we select a king from the deck without one card, so the probability to choose a king is $4/51$. The total probability~is
         \[ P(A \text{ and then } K) = P(A) \cdot P(K \mid A) = \frac{4}{52} \cdot \frac{4}{51} = \frac{4}{663}. \]
       }
     \end{column}
@@ -138,15 +138,15 @@
 \begin{frame}{Using the negative case}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
-      All probable outcomes of one experiment is equal to all experiment. That mean that probability of all outcomes is 
+      All possible outcomes of an experiment must equal the entire experiment.  That means that the probability for all outcomes is
       \[ P(\text{All outcomes}) = 1. \]
       \vspace*{-1em}
       \begin{problem}
         What is the probability if throwing the dice and not to get $4$. 
       \end{problem}
-      There are $5$ outcomes that is desired: $1$, $2$, $3$, $5$, and $6$. So total probability would be 
+      There are $5$ outcomes that are desired: $1$, $2$, $3$, $5$, and $6$. So total probability would be 
       \[ P(\text{not throwing $4$}) = 5 \cdot \frac{1}{6} = \frac{5}{6}. \]
-      From other hand there is only one event that is not desired, so we can calculate the same probability as
+      On the other hand there is only one event that is not desired, so we can calculate the same probability as
       \begin{multline*} 
         P(\text{not throwing $4$}) = \\
         = P(\text{all possible results}) - P(\text{throwing $4$}) = \\
@@ -161,7 +161,7 @@
       \end{definition}
       Sometimes that simplifies the solution.
       \begin{problem}
-        We are draw $4$ cards from a full deck of cards. What is the probability to get \emph{at least one ace}?
+        We are drawing $4$ cards from a full deck of cards. What is the probability to get \emph{at least one ace}?
       \end{problem}
       If we try to solve the problem using the \emph{conditional probability} we find out that number of cases is pretty big. But we may count the probability to \emph{not get any ace}.
       \[ P (\text{no ace}) = \frac{48}{52} \cdot \frac{47}{51} \cdot \frac{46}{50} \cdot \frac{45}{49} = \frac{38916}{54145} \approx 72\%.\]\\[-1ex]
@@ -179,11 +179,11 @@
       \end{problem}
       It is easier to calculate the probability that \emph{no two people share a birthday}. 
       
-      Les's start with the first guest. He don't share a birthday with anyone. So the probability is $1$.
+      Les's start with the first guest. He doesn't share a birthday with anyone. So the probability is $1$.
       
       The second guest may share a birthday with the first guest with probability $364/365$. 
       
-      The third one don't share a birthday with previous guests with probability $363/365$ and so on. 
+      The third one doesn't share a birthday with previous guests with probability $363/365$ and so on. 
       
       For $n$ guests
       \begin{multline*}
@@ -331,19 +331,19 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Team attack problems}
-  \begin{columns}[T]
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \item In one scenario in the board game risk, a~defender rolls a $6$-sided die, and the attacker rolls a pair of $6$-sided dice.  The higher attacking die is compared to the defending die, and the defender wins if its roll is greater than or equal to the higher attacking die.  What is the probability that the defender wins?
-        \item What is the probability that a positive integer less than $1000$ has units digit $4$ and is divisible by $7$?  Express your answer as a~common fraction.
+% \begin{frame}{Team attack problems}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item In one scenario in the board game risk, a~defender rolls a $6$-sided die, and the attacker rolls a pair of $6$-sided dice.  The higher attacking die is compared to the defending die, and the defender wins if its roll is greater than or equal to the higher attacking die.  What is the probability that the defender wins?
+%         \item What is the probability that a positive integer less than $1000$ has units digit $4$ and is divisible by $7$?  Express your answer as a~common fraction.
         
-      \end{enumerate}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-    \end{column}
-  \end{columns}
-\end{frame}
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
 
 % \begin{frame}{Title}
 %   \begin{columns}[T]
