--- a/02 - Combinatorics 101.tex
+++ b/02 - Combinatorics 101.tex
@@ -49,7 +49,7 @@
         if we have $a$ number of ways of doing something and $b$ number of ways of doing another thing and we can not do both at the same time, then there are $a + b$ ways to choose one of the actions.
       \end{definition}
 
-      Of couse this principle may be extended for many options, for example if you have $5$ plates with $10$ apples on each, there are 
+      Of course this principle may be extended for many options, for example if you have $5$ plates with $10$ apples on each, there are 
       \[10+10+10+10+10 = 50\] 
       options to pick one apple.
     \end{column}
