--- a/03 - Probablility.tex
+++ b/03 - Probablility.tex
@@ -32,7 +32,7 @@
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{definition}
-        If the number of outcomes is countable and \emph{if all oucomes have the same probability}, then \mbox{the~\textbf{probability}} of desired oucome is:
+        If the number of outcomes is countable and \emph{if all outcomes have the same probability}, then \mbox{the~\textbf{probability}} of desired outcome is:
         \[ P = \frac{\text{(number of desired outcomes)}}{\text{(total number of events)}}. \]
         \vspace*{-1.5ex}
       \end{definition}
@@ -64,7 +64,7 @@
         \vspace{-1em}
         \includegraphics[width=0.25\textwidth]{03 - Probability/king-clip-art.png}
       \end{wrapfigure}
-      \mbox{A card that we got from the deck of cards} may not be both an ace and a king. So we have $4$ \emph{oucomes} of getting an ace and $4$ \emph{oucomes} of getting a king. The result number of \emph{desired oucomes} is $8$. The \emph{total number of possible outcomes} is $52$.
+      \mbox{A card that we got from the deck of cards} may not be both an ace and a king. So we have $4$ \emph{outcomes} of getting an ace and $4$ \emph{outcomes} of getting a king. The result number of \emph{desired outcomes} is $8$. The \emph{total number of possible outcomes} is $52$.
       The total probability is
       \[ P = \frac{4 + 4}{52} = \frac{8}{52} = \frac{2}{13}. \]
       We also may count the probability in other way. The \emph{probability} of getting an ace is $4/52$ and the \emph{probability} of getting a king is also $4/52$. Since both cases are good for us, the total probability is
@@ -72,7 +72,7 @@
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{definition}
-        If two events are \emph{oucomes} of one experiment and they \emph{may not happen together}, then \emph{probability} of any of this event is \textbf{sum of their probabilities}
+        If two events are \emph{outcomes} of one experiment and they \emph{may not happen together}, then \emph{probability} of any of this event is \textbf{sum of their probabilities}
         \[ P(A\ \text{or}\ B) = P(A) + P(B). \]
         \vspace*{-2.5ex}          
       \end{definition}
