Add slides 04 - Number Theory 101

--- a/beamercolorthemegraham.sty
+++ b/beamercolorthemegraham.sty
@@ -31,6 +31,7 @@
 \setbeamercolor{normal text in math text}{fg=textinmath}
 
 \setbeamercolor{enumerate item}{fg=darkOrange}
+\setbeamercolor{itemize item}{fg=darkOrange}
 
 \AtBeginEnvironment{problem}{%
   \setbeamercolor{block body}{bg=backgroundGrey}
