--- a/beamerouterthemegraham.sty
+++ b/beamerouterthemegraham.sty
@@ -12,6 +12,7 @@
 \setmainfont{Arial}
 \setmathfont[Color=1155cc]{STIXTwoMath-Regular.otf}[Scale=MatchLowercase]
 \newfontfamily\HUGE[SizeFeatures={Size=30}]{Arial Bold}
+\DeclareMathAlphabet{\mathbb}{U}{msb}{m}{n}
 
 \newlength{\marginedPaperWidth}{\paperwidth - 0.2cm}
 
