Add slides 5 - Number Theory 102

--- a/04 - Number Theory 101.tex
+++ b/04 - Number Theory 101.tex
@@ -111,14 +111,14 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
              143 & 11 \\
               13 & 13 \\
           \end{tabular} 
-          &
+          & \quad
           \begin{tabular}{r}
-            13\\\
-            \Mydiv{11}{143}\\
-            \Mydiv{5}{715}\\
-            \Mydiv{2}{1430}\\
-            \Mydiv{2}{2860}\\
-            \Mydiv{2}{5720}
+            1\;3\\\
+            \Mydiv{11}{\ 1\;4\;3}\\
+            \Mydiv{5}{\ 7\;1\;5}\\
+            \Mydiv{2}{\ 1\;4\;3\;0}\\
+            \Mydiv{2}{\ 2\;8\;6\;0}\\
+            \Mydiv{2}{\ 5\;7\;2\;0}
           \end{tabular}
         \end{tabular}
       \]
