--- a/05 - Number Theory 102.tex
+++ b/05 - Number Theory 102.tex
@@ -207,7 +207,7 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
       \end{wrapfigure}
       As~a~result,~the~numbers~will form~a~repeated~pattern~with period $4$. 
 
-      To find the last digit of $7^{42}$, we need to find a reminder of $42$ divided by 4. $42 = 10 \times 4 + 2$, so the last digit of $7^{42}$ will be the same as of $7^2$. That means that the last digit of $7^{42}$ is $9$.
+      To find the last digit of $7^{42}$, we need to find a reminder of $42$ divided by $4$. $42 = 10 \times 4 + 2$, so the last digit of $7^{42}$ will be the same as of $7^2$. That means that the last digit of $7^{42}$ is $9$.
     \end{column}
   \end{columns}
 \end{frame}
