--- a/05 - Number Theory 102.tex
+++ b/05 - Number Theory 102.tex
@@ -142,7 +142,7 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
       \[ 6547_{10} = 8 \times 9^3 + 8 \times 9^2 + 7 \times 9 + 4. \]
       as
       \[ 6547_{10} = \left( \left(8 \times 9 + 8 \right) \times 9 + 7 \right) \times 9 + 4. \]
-      and it gives us second method:
+      and it gives us the second method:
       \begin{align*}
         6547 &= 727 * 9 + \mathbf{4}, \\
         727 &= 80 * 9 + \mathbf{7}, \\
